fix(studio): overflow logs

--- a/src/bp/ui-studio/src/web/components/Layout/StatusBar/BottomPanel.styl
+++ b/src/bp/ui-studio/src/web/components/Layout/StatusBar/BottomPanel.styl
@@ -35,6 +35,7 @@
   list-style-type: none;
   padding-left: 0;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 100%;
 
   &::-webkit-scrollbar {
